--- a/refer-effect/parallaxEffext/parallaxapple.html
+++ b/refer-effect/parallaxEffext/parallaxapple.html
@@ -436,7 +436,7 @@
                  data-4200="width: 100vw;"
                  data-10200="width: 100vw; display: block;"
                  data-10201="width: 100vw; display: none;"
-                 ><img src="../assets/img/apple1@2.jpg" alt="이미지">
+                 ><img src="/class/img/img06.jpg" alt="이미지">
             </div>
             <div class="s1Text4 fixed"
                  data-3800="width: 0vw; height: 0vw;"
