--- a/refer-effect/gameEffect/index.html
+++ b/refer-effect/gameEffect/index.html
@@ -19,12 +19,13 @@
 
     <nav id="nav">
         <ul>
-            <li><a href="quiz/quiz01.html">1</a></li>
-            <li><a href="quiz/quiz02.html">2</a></li>
-            <li><a href="quiz/quiz03.html">3</a></li>
-            <li><a href="quiz/quiz04.html">4</a></li>
-            <li><a href="cardGame.html">5</a></li>
-            <li><a href="searchGame.html">6</a></li>
+            <li><a href="quiz/quiz01.html">QUIZ1</a></li>
+            <li><a href="quiz/quiz02.html">QUIZ2</a></li>
+            <li><a href="quiz/quiz03.html">QUIZ3</a></li>
+            <li><a href="quiz/quiz04.html">QUIZ4</a></li>
+            <li><a href="cardGame.html">CARD</a></li>
+            <li><a href="searchGame_CSS.html">SEARCH1</a></li>
+            <li><a href="searchGame_HTML.html">SEARCH2</a></li>
         </ul>
     </nav>
 
