--- a/refer-effect/gameEffect/searchGame_HTML.html
+++ b/refer-effect/gameEffect/searchGame_HTML.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS Search</title>
+    <title>HTML Search</title>
 
     <!-- font-aswesome - icon -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
@@ -35,15 +35,12 @@
             vertical-align: top;
         }
         body {
-            background:
-            radial-gradient(black 3px, transparent 4px),
-            radial-gradient(black 3px, transparent 4px),
-            linear-gradient(#fff 4px, transparent 0),
-            linear-gradient(45deg, transparent 74px, transparent 75px, #a4a4a4 75px, #a4a4a4 76px, transparent 77px, transparent 109px),
-            linear-gradient(-45deg, transparent 75px, transparent 76px, #a4a4a4 76px, #a4a4a4 77px, transparent 78px, transparent 109px),
-            #fff;
-            background-size: 109px 109px, 109px 109px,100% 6px, 109px 109px, 109px 109px;
-            background-position: 54px 55px, 0px 0px, 0px 0px, 0px 0px, 0px 0px;
+            background-image:
+                radial-gradient(closest-side, transparent 0%, transparent 75%, #B6CC66 76%, #B6CC66 85%, #EDFFDB 86%, #EDFFDB 94%, #FFFFFF 95%, #FFFFFF 103%, #D9E6A7 104%, #D9E6A7 112%, #798B3C 113%, #798B3C 121%, #FFFFFF 122%, #FFFFFF 130%, #E0EAD7 131%, #E0EAD7 140%),
+                radial-gradient(closest-side, transparent 0%, transparent 75%, #B6CC66 76%, #B6CC66 85%, #EDFFDB 86%, #EDFFDB 94%, #FFFFFF 95%, #FFFFFF 103%, #D9E6A7 104%, #D9E6A7 112%, #798B3C 113%, #798B3C 121%, #FFFFFF 122%, #FFFFFF 130%, #E0EAD7 131%, #E0EAD7 140%);
+            background-size: 110px 110px;
+            background-color: #C8D3A7;
+            background-position: 0 0, 55px 55px;
         }
 
         /* audio */
@@ -54,7 +51,7 @@
         .audio .btn-sound {
             display: block;
             width: 40px; height: 40px;
-            background: #223547;
+            background: #473922;
             text-align: center;
             line-height: 40px;
             color: #fff;
@@ -68,7 +65,7 @@
             width: 80vw;
             min-height: 30vh;
             background-color: #f1f1f6;
-            border: 4px solid #223547;
+            border: 4px solid #473922;
             padding: 4vw 2vw;
             margin: 5vw auto;
             border-radius: 1vw;
@@ -80,13 +77,13 @@
         }
         .search span {
             font-size: 1.4vw;
-            color: #223547;
+            color: #473922;
         }
         .search h1 {
             font-family: 'TmonMonsori';
             font-size: 4vw;
             line-height: 2;
-            color: #223547;
+            color: #473922;
         }
         .search label {
             overflow: hidden;
@@ -99,7 +96,7 @@
         .search input {
             font-family: 'GyeonggiBatang';
             font-size: 24px;
-            border: 4px solid #223547;
+            border: 4px solid #473922;
             padding: 10px 30px;
             background: #fff;
             border-radius: 50px;
@@ -108,9 +105,9 @@
         .search button {
             font-family: 'GyeonggiBatang';
             font-size: 24px;
-            border: 4px solid #223547;
+            border: 4px solid #473922;
             padding: 10px 30px;
-            background: #223547;
+            background: #473922;
             border-radius: 50px;
             color: #fff;
             cursor: pointer;
@@ -118,8 +115,8 @@
         }
         .search button:hover {
             box-shadow: inset 3px 3px 3px #fff;
-            border-color: #3d5e7e;
-            background: #5e7b96;
+            border-color: #da8e15;
+            background: #da8e15;
         }
 
         /* info */
@@ -132,7 +129,7 @@
             justify-content: space-between;
         }
         .info .time {
-            background: #223547;
+            background: #473922;
             padding: 10px 20px;
             color: #fff;
             border-radius: 3px;
@@ -153,7 +150,7 @@
         /* answers */
         .answers {}
         .answers span {
-            border: 1px solid #223547;
+            border: 1px solid #473922;
             display: inline-block;
             padding: 10px 20px;
             border-radius: 50px;
@@ -161,7 +158,7 @@
             transition: all .3s;
         }
         .answers span:hover {
-            background: #223547;
+            background: #473922;
             color: #fff;
         }
 
@@ -174,8 +171,8 @@
             content: '오답보기 : ';
         }
         .missAnswers span {
-            border: 1px solid #223547;
-            background-color: #223547;
+            border: 1px solid #473922;
+            background-color: #473922;
             color: #fff;
             display: inline-block;
             padding: 10px 20px;
@@ -185,7 +182,7 @@
         }
         .missAnswers span:hover {
             background: #fff;
-            color: #223547;
+            color: #473922;
         }
 
         /* again-btn */
@@ -201,25 +198,25 @@
             <!-- <i class="fa fa-volume-up" aria-hidden="true"></i> -->
             <i class="fa fa-volume-off" aria-hidden="true"></i>
         </span>
-        <audio id="music" src="../assets/audio/bg_searchGame.mp3" loop="loop" alt="[무료비트] 밝은 랩 하기 좋고 신나면서 트렌디한 팝 비트  MBTI  그레이 X 로꼬 X 김하온 X 그루비룸 타입비트 l [FREE] INSTRUMENTAL 2021"></audio>
+        <audio id="music" src="../assets/audio/bg_searchGame2.mp3" loop="loop" alt="[무료비트] 트렌디 하면서 신나는 팝 비트  TOUCH  그레이 X 기리보이 X 로꼬 X 자이언티 타입비트 l [FREE] INSTRUMENTAL 2021"></audio>
     </article>
     <!-- //audio -->
 
     <!-- searchWrap -->
     <div class="searchWrap">
         <div class="search">
-            <span>1분 동안 CSS 속성 검색하기</span>
-            <h1>CSS 속성 검색하기</h1>
+            <span>1분30초 동안 HTML 속성 검색하기</span>
+            <h1>HTML 속성 검색하기</h1>
             <div>
                 <label for="search-box">검색하기</label>
-                <input id="search-box" class="start-input" type="text" placeholder="CSS 속성을 입력하세요!" disabled="disabled">
+                <input id="search-box" class="start-input" type="text" placeholder="HTML 속성을 입력하세요!" disabled="disabled">
                 <button class="start-btn">시작하기</button>
                 <button class="again-btn">다시하기</button>
             </div>
         </div>
         <div class="info">
             <div>남은 시간 : <span class="time">1:30</span></div>
-            <div>현재 점수 : <span class="score">0</span>/<span class="total">199</span></div>
+            <div>현재 점수 : <span class="score">0</span>/<span class="total">129</span></div>
         </div>
         <div class="msg">00개를 틀렸습니다.</div>
         <div class="answers"></div>
@@ -232,7 +229,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script>
         // css속성
-        const quizAnswers = ["align-content", "align-items", "align-self", "all", "animation", "animation-delay", "animation-direction", "animation-duration", "animation-fill-mode", "animation-iteration-count", "animation-name", "animation-play-state", "animation-timing-function", "backface-visibility", "background", "background-attachment", "background-blend-mode", "background-clip", "background-color", "background-image", "background-origin", "background-position", "background-repeat", "background-size", "border", "border-bottom", "border-bottom-color", "border-bottom-left-radius", "border-bottom-right-radius", "border-bottom-style", "border-bottom-width", "border-collapse", "border-color", "border-image", "border-image-outset", "border-image-repeat", "border-image-slice", "border-image-source", "border-image-width", "border-left", "border-left-color", "border-left-style", "border-left-width", "border-radius", "border-right", "border-right-color", "border-right-style", "border-right-width", "border-spacing", "border-style", "border-top", "border-top-color", "border-top-left-radius", "border-top-right-radiu", "border-top-style", "border-top-width ", "border-width", "bottom", "box-decoration-break", "box-shadow", "box-sizing", "caption-side", "caret-color", "clear", "clip", "color", "column-count", "column-fill", "column-gap", "column-rule ", "column-rule-color", "column-rule-style", "column-rule-width", "column-span", "column-width", "columns", "content", "counter-increment", "counter-reset", "cursor", "direction", "display", "empty-cells", "filter", "flex", "flex-basis", "flex-direction", "flex-flow", "flex-grow", "flex-shrink", "flex-wrap", "float", "font", "font-family", "font-size", "font-size-adjust", "font-stretch", "font-style", "font-variant", "font-weight", "grid", "grid-area", "grid-auto-columns", "grid-auto-flow", "grid-auto-rows", "grid-column", "grid-column-end", "grid-column-gap", "grid-column-start", "grid-gap", "grid-row", "grid-row-end", "grid-row-gap", "grid-row-start", "grid-template", "grid-template-areas", "grid-template-columns", "grid-template-rows", "hanging-punctuation", "height", "hyphens", "isolation", "justify-content", "left", "letter-spacing", "line-height", "list-style", "list-style-image", "list-style-position", "list-style-type", "margin", "margin-bottom", "margin-left", "margin-right", "margin-top", "max-height", "max-width ", "min-height", "min-width", "mix-blend-mode", "object-fit", "object-position", "opacity", "order", "outline", "outline-color", "outline-offset", "outline-style", "outline-width", "overflow", "overflow-x", "overflow-y", "padding", "padding-bottom", "padding-left", "padding-right", "padding-top", "page-break-after", "page-break-before", "page-break-inside", "perspective", "perspective-origin", "pointer-events", "position", "quotes", "resize", "right", "tab-size", "table-layout", "text-align", "text-align-last", "text-decoration", "text-decoration-color ", "text-decoration-line", "text-decoration-style", "text-indent", "text-justify", "text-overflow", "text-shadow", "text-transform", "top", "transform", "transform-origin", "transform-style", "transition", "transition-delay", "transition-duration", "transition-property", "transition-timing-function", "unicode-bidi", "user-select", "vertical-align", "visibility", "white-space", "width", "word-break", "word-spacing", "word-wrap", "z-index"];
+        const quizAnswers = ["a", "abbr", "acronym", "address", "applet", "area", "article", "aside", "audio", "b", "base", "basefont", "bdi", "bdo", "big", "blockquote", "blink", "body", "br", "button", "canvas", "caption", "center", "cite", "code", "col", "colgroup", "data", "datalist", "dd", "del", "details", "dfn", "dialog", "dir", "div", "dl", "dt", "em", "embed", "fieldset", "figcaption", "figure", "font", "footer", "form", "frame", "frameset", "h1", "h2", "h3", "h4", "h5", "h6", "head", "header", "hgroup", "hr", "html", "i", "iframe", "img", "input", "ins", "kbd", "keygen", "label", "legend", "li", "link", "main", "map", "mark", "marquee", "menu", "menuitem", "meta", "meter", "nav", "noframes", "noscript", "object", "ol", "optgroup", "option", "output", "p", "param", "picture", "pre", "progress", "q","rp", "rt", "rtc", "ruby", "s", "samp", "script", "section", "select", "small", "source", "span", "strike", "strong", "style", "sub", "summary", "sup", "svg", "table", "tbody", "td", "template", "textarea", "tfoot", "th", "thead", "time", "title", "tr", "track", "tt", "u", "ul", "var", "video", "wbr"];
         
         // 선택자 및 변수 설정
         const $totalCount = $(".total"),
@@ -361,7 +358,7 @@
 
         // 게임 끝났을 때
         function endQuiz(){
-            alert("게임이 끝났습니다!!");
+            alert("GAME OVER!!");
 
             // 시간 정지
             clearInterval(timeInterval);
