--- a/refer-jquery/jqueryRefer02.html
+++ b/refer-jquery/jqueryRefer02.html
@@ -69,177 +69,177 @@
                             <td>.eq() ❤️</td>
                             <td>$("selector").eq(3)</td>
                             <td>-</td>
-                            <td></td>
+                            <td>기본 태그를 선택합니다.</td>
                         </tr>
                         <tr>
                             <td>.filter()</td>
                             <td>$("selector").filter()</td>
                             <td>-</td>
-                            <td></td>
+                            <td>클래스를 선택합니다.</td>
                         </tr>
                         <tr>
                             <td>.first()</td>
                             <td>$("selector").first()</td>
                             <td>-</td>
-                            <td></td>
+                            <td>클래스를 선택합니다.</td>
                         </tr>
                         <tr>
                             <td>.has() ❤️</td>
                             <td>$("selector").has()</td>
                             <td>-</td>
-                            <td></td>
+                            <td>클래스를 선택합니다.</td>
                         </tr>
                         <tr>
                             <td>.is()</td>
                             <td>$("selector").is()</td>
                             <td>-</td>
-                            <td></td>
+                            <td>클래스를 선택합니다.</td>
                         </tr>
                         <tr>
                             <td>.last()</td>
                             <td>$("selector").last()</td>
                             <td>-</td>
-                            <td></td>
+                            <td>클래스를 선택합니다.</td>
                         </tr>
                         <tr>
                             <td>.map()</td>
                             <td>$("selector").map()</td>
                             <td>-</td>
-                            <td></td>
+                            <td>클래스를 선택합니다.</td>
                         </tr>
                         <tr>
                             <td>.not()</td>
                             <td>$("selector").not()</td>
                             <td>-</td>
-                            <td></td>
+                            <td>클래스를 선택합니다.</td>
                         </tr>
                         <tr>
                             <td>.odd()</td>
                             <td>$("selector").odd()</td>
                             <td>-</td>
-                            <td></td>
+                            <td>클래스를 선택합니다.</td>
                         </tr>
                         <tr>
                             <td>.slice()</td>
                             <td>$("selector").slice()</td>
                             <td>-</td>
-                            <td></td>
+                            <td>클래스를 선택합니다.</td>
                         </tr>
                         <tr>
                             <td class="center" rowspan="14">트리구조</td>
                             <td>.children()</td>
                             <td>$("selector").children()</td>
                             <td>-</td>
-                            <td></td>
+                            <td>기본 태그를 선택합니다.</td>
                         </tr>
                         <tr>
                             <td>.closet()</td>
                             <td>$("selector").closet()</td>
                             <td>-</td>
-                            <td></td>
+                            <td>클래스를 선택합니다.</td>
                         </tr>
                         <tr>
                             <td>.find() ❤️</td>
                             <td>$("selector").find()</td>
                             <td>-</td>
-                            <td></td>
+                            <td>클래스를 선택합니다.</td>
                         </tr>
                         <tr>
                             <td>.next() ❤️</td>
                             <td>$("selector").next()</td>
                             <td>-</td>
-                            <td></td>
+                            <td>클래스를 선택합니다.</td>
                         </tr>
                         <tr>
                             <td>.nextAll()</td>
                             <td>$("selector").nextAll()</td>
                             <td>-</td>
-                            <td></td>
+                            <td>클래스를 선택합니다.</td>
                         </tr>
                         <tr>
                             <td>.nextUntil()</td>
                             <td>$("selector").nextUntil()</td>
                             <td>-</td>
-                            <td></td>
+                            <td>클래스를 선택합니다.</td>
                         </tr>
                         <tr>
                             <td>.offsetParent()</td>
                             <td>$("selector").offsetParent()</td>
                             <td>-</td>
-                            <td></td>
+                            <td>클래스를 선택합니다.</td>
                         </tr>
                         <tr>
                             <td>.parent() ❤️</td>
                             <td>$("selector").parent()</td>
                             <td>parentNode</td>
-                            <td></td>
+                            <td>클래스를 선택합니다.</td>
                         </tr>
                         <tr>
                             <td>.parents()</td>
                             <td>$("selector").parents()</td>
                             <td>-</td>
-                            <td></td>
+                            <td>클래스를 선택합니다.</td>
                         </tr>
                         <tr>
                             <td>.parentsUntil()</td>
                             <td>$("selector").parentsUntil()</td>
                             <td>-</td>
-                            <td></td>
+                            <td>클래스를 선택합니다.</td>
                         </tr>
                         <tr>
                             <td>.prev() ❤️</td>
                             <td>$("selector").prev()</td>
                             <td>-</td>
-                            <td></td>
+                            <td>클래스를 선택합니다.</td>
                         </tr>
                         <tr>
                             <td>.prevAll()</td>
                             <td>$("selector").prevAll()</td>
                             <td>-</td>
-                            <td></td>
+                            <td>클래스를 선택합니다.</td>
                         </tr>
                         <tr>
                             <td>.prevUntil()</td>
                             <td>$("selector").prevUntil()</td>
                             <td>-</td>
-                            <td></td>
+                            <td>클래스를 선택합니다.</td>
                         </tr>
                         <tr>
                             <td>.siblings()</td>
                             <td>$("selector").siblings()</td>
                             <td>-</td>
-                            <td></td>
+                            <td>클래스를 선택합니다.</td>
                         </tr>
                         <tr>
                             <td class="center" rowspan="5">기타</td>
                             <td>.add()</td>
                             <td>$("selector").add()</td>
                             <td>-</td>
-                            <td></td>
+                            <td>기본 태그를 선택합니다.</td>
                         </tr>
                         <tr>
                             <td>.addBack()</td>
                             <td>$("selector").addBack()</td>
                             <td>-</td>
-                            <td></td>
+                            <td>클래스를 선택합니다.</td>
                         </tr>
                         <tr>
                             <td>.contents()</td>
                             <td>$("selector").contents()</td>
                             <td>-</td>
-                            <td></td>
+                            <td>클래스를 선택합니다.</td>
                         </tr>
                         <tr>
                             <td>.each() ❤️</td>
                             <td>$("selector").each()</td>
                             <td>forEach</td>
-                            <td></td>
+                            <td>클래스를 선택합니다.</td>
                         </tr>
                         <tr>
                             <td>.end()</td>
                             <td>$("selector").end()</td>
                             <td>-</td>
-                            <td></td>
+                            <td>클래스를 선택합니다.</td>
                         </tr>
                     </tbody>
                 </table>
