--- a/refer-jquery/jqueryRefer03.html
+++ b/refer-jquery/jqueryRefer03.html
@@ -14,6 +14,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     
     <style>
+        td > a:hover {
+            color: #b6d81d;
+        }
         /* ex1 */
         .ex1 {
             display: flex;
