--- a/illustrator/index.html
+++ b/illustrator/index.html
@@ -254,6 +254,35 @@
                 </div>
                 <!-- //Intro9 -->
 
+                <!-- Intro10 -->
+                <div class="bs-docs-section">
+                    <h2 id="intro10" class="page-header">일러스트10</h2>
+                    <p class="bs-callout bs-callout-info">인포그래픽 그리기</p>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <a href="#" class="thumbnail">
+                                <img src="img/section07-1.jpg" alt="레이아웃">
+                            </a>
+                        </div>
+                        <div class="col-md-6">
+                            <a href="#" class="thumbnail">
+                                <img src="img/section07-2.jpg" alt="레이아웃">
+                            </a>
+                        </div>
+                        <div class="col-md-6">
+                            <a href="#" class="thumbnail">
+                                <img src="img/section07-3.jpg" alt="레이아웃">
+                            </a>
+                        </div>
+                        <div class="col-md-6">
+                            <a href="#" class="thumbnail">
+                                <img src="img/section07-4.jpg" alt="레이아웃">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <!-- //Intro10 -->
+
             </div>
             <!-- //col-md-9 -->
 
@@ -271,6 +300,7 @@
                         <li><a href="#intro7">일러스트7</a></li>
                         <li><a href="#intro8">일러스트8</a></li>
                         <li><a href="#intro9">일러스트9</a></li>
+                        <li><a href="#intro10">일러스트10</a></li>
                     </ul>
                 </div>
             </div>
