--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
         }
         .bg12 {
             /* background: linear-gradient(to bottom, #ffdde1, #ee9ca7) !important; */
-            background: #0299E3 !important;
+            /* background: url(../dothome21/illustrator/img/section06-1.jpg) ;
+            background-position: center; */
         }
         .header_icon li a {
             background-color: #FF7042;
@@ -991,6 +992,27 @@
                                     <h5>FIGMA React</h5>
                                     <p>피그마 React</p>
                                     <span>FIGMA React</span>
+                                </div>
+                            </div>
+                        </a> 
+                    </section>
+                    <!-- //box -->
+
+                    <!-- box -->
+                    <section class="color-shape reference figma">
+                        <a href="https://www.figma.com/file/2e8r7G3tuw1BNFyouOIdJ8/Portfolio?node-id=0%3A1" target="_blank">
+                            <div class="image-wrap">
+                                <div class="hover-wrap">
+                                    <span class="overlay-img-donut">FIGMA Portfolio</span>
+                                    <span class="overlay-text-thumb-donut">피그마 Portfolio</span>
+                                    <span class="overlay-text-thumb1-donut">피그마 Portfolio</span>
+                                    <span class="overlay-text-thumb2-donut">FIGMA Portfolio</span>
+                                </div>
+                                <img src="assets/img/Landscape-circle/great-wall-of-china.png" alt="portfolio">
+                                <div class="img-text donutImg">
+                                    <h5>FIGMA Portfolio</h5>
+                                    <p>피그마 Portfolio</p>
+                                    <span>FIGMA Portfolio</span>
                                 </div>
                             </div>
                         </a> 
