--- a/index.html
+++ b/index.html
@@ -1364,7 +1364,7 @@
                     <!-- //box -->
 
                     <!-- box -->
-                    <section class="color-shape reference">
+                    <!-- <section class="color-shape reference">
                         <a href="refer-effect/gameEffect/tetris/tetris.html" target="_blank">
                             <div class="image-wrap">
                                 <div class="hover-wrap">
@@ -1381,11 +1381,11 @@
                                 </div>
                             </div>
                         </a> 
-                    </section>
+                    </section> -->
                     <!-- //box -->
                     
                     <!-- box -->
-                    <section class="color-shape reference">
+                    <!-- <section class="color-shape reference">
                         <a href="refer-effect/gameEffect/typing/En_typing.html" target="_blank">
                             <div class="image-wrap">
                                 <div class="hover-wrap">
@@ -1402,7 +1402,7 @@
                                 </div>
                             </div>
                         </a> 
-                    </section>
+                    </section> -->
                     <!-- //box -->
 
                     <!-- box -->
