--- a/refer-effect/gameEffect/index.html
+++ b/refer-effect/gameEffect/index.html
@@ -28,6 +28,8 @@
             <li><a href="cardGame.html">CARD</a></li>
             <li><a href="searchGame_CSS.html">SEARCH1</a></li>
             <li><a href="searchGame_HTML.html">SEARCH2</a></li>
+            <li><a href="tetris/tetris.html">TETRIS</a></li>
+            <li><a href="typing/En_typing.html">TYPING</a></li>
         </ul>
     </nav>
 
