--- a/refer-effect/index.html
+++ b/refer-effect/index.html
@@ -14,12 +14,12 @@
     <div id="canvas"></div>
 
     <div id="contents">
-        <h1>javascript effect</h1>
+        <h1>script effect</h1>
     </div>
 
     <nav id="nav">
         <ul>
-            <li><a href="menuEffect/index.html">Menu</a></li>
+            <!-- <li><a href="menuEffect/index.html">Menu</a></li> -->
             <li><a href="mouseEffect/index.html">Mouse</a></li>
             <li><a href="sliderEffect/index.html">Slider</a></li>
             <li><a href="parallaxEffext/index.html">Parallax</a></li>
