--- a/index.html
+++ b/index.html
@@ -1113,7 +1113,7 @@
 
                     <!-- box -->
                     <section class="color-shape reference">
-                        <a href="site-react/main2.html" target="_blank">
+                        <a href="https://kdongsreact.web.app/" target="_blank">
                             <div class="image-wrap">
                                 <div class="hover-wrap">
                                     <span class="overlay-img-donut">REACT SITE</span>
