--- a/refer-effect/gameEffect/cardGame2.html
+++ b/refer-effect/gameEffect/cardGame2.html
@@ -174,7 +174,7 @@
             backface-visibility: hidden;
             background-position: center;
             background-repeat: no-repeat;
-            background-size: 90%;
+            background-size: 60%;
         }
         .cardWrap .card .front {
             transform: rotateY(0deg);
@@ -188,48 +188,32 @@
             background-image: url(../assets/img/cardBG10.png);
             background-size: cover;
         }
-        .cardWrap .card .front.bg01 {
-            background-image: url(../assets/img/cardBG10.png);
-            background-size: cover;
-        }
-        .cardWrap .card .front.bg02{
-            background-image: url(../assets/img/cardBG02.jpg);
-            background-size: cover;
-        }
-        .cardWrap .card .front.bg03{
-            background-image: url(../assets/img/cardBG03.jpg);
-            background-size: cover;
-        }
-        .cardWrap .card .front.bg04{
-            background-image: url(../assets/img/cardBG04.jpg);
-            background-size: cover;
-        }
         .card[data-type=img1] .back {
-            background-image: url(../assets/img/sunny-day.png);
+            background-image: url(../assets/img/mozilla.png);
         }
         .card[data-type=img2] .back {
-            background-image: url(../assets/img/cold.png);
+            background-image: url(../assets/img/android.png);
         }
         .card[data-type=img3] .back {
-            background-image: url(../assets/img/rainy-day.png);
+            background-image: url(../assets/img/apple.png);
         }
         .card[data-type=img4] .back {
-            background-image: url(../assets/img/cloudy-day.png);
+            background-image: url(../assets/img/opera.png);
         }
         .card[data-type=img5] .back {
-            background-image: url(../assets/img/lighting.png);
+            background-image: url(../assets/img/netscape.png);
         }
         .card[data-type=img6] .back {
-            background-image: url(../assets/img/partialy-cloudy.png);
+            background-image: url(../assets/img/safari.png);
         }
         .card[data-type=img7] .back {
-            background-image: url(../assets/img/dark-night.png);
+            background-image: url(../assets/img/chrome.png);
         }
         .card[data-type=img8] .back {
-            background-image: url(../assets/img/rainbow.png);
+            background-image: url(../assets/img/linux.png);
         }
         .card[data-type=img9] .back {
-            background-image: url(../assets/img/hot-weather.png);
+            background-image: url(../assets/img/explorer.png);
         }
     </style>
 </head>
