--- a/site/test03.html
+++ b/site/test03.html
@@ -67,7 +67,7 @@
             <p>AI 기술이 집약된 제품으로 편리한 일상을 만나보세요.</p>
             <ul class="card-ul">
                 <li>
-                    <img src="https://static-clova.pstatic.net/static/d15c0af/img/bridge/img_clova_lamp.png" alt="">
+                    <img src="img/clova01.jpg" alt="CLOVA Lamp">
                     <div class="card">
                         <h4>CLOVA Lamp</h4>
                         <span>NEW</span>
@@ -79,7 +79,7 @@
                     </div>
                 </li>
                 <li>
-                    <img src="https://static-clova.pstatic.net/static/d15c0af/img/bridge/img_clova_clock.png" alt="">
+                    <img src="img/clova02.jpg" alt="CLOVA Clock">
                     <div class="card">
                         <h4>CLOVA Clock</h4>
                         <span>NEW</span>
@@ -90,7 +90,7 @@
                     </div>
                 </li>
                 <li>
-                    <img src="https://static-clova.pstatic.net/static/d15c0af/img/bridge/img_clova_friends.png" alt="">
+                    <img src="img/clova03.jpg" alt="CLOVA Friends">
                     <div class="card">
                         <h4>CLOVA Friends</h4>
                         <p>음악 추천부터 네이버 검색까지<br>다재다능한 스마트 스피커</p>
@@ -100,7 +100,7 @@
                     </div>
                 </li>
                 <li>
-                    <img src="https://static-clova.pstatic.net/static/d15c0af/img/bridge/img_clova_wave.png" alt="">
+                    <img src="img/clova04.jpg" alt="CLOVA WAVE">
                     <div class="card">
                         <h4>CLOVA WAVE</h4>
                         <p>풍부하고 선명한 사운드로 즐기는<br>최적의 스마트홈 스피커</p>
@@ -110,7 +110,7 @@
                     </div>
                 </li>
                 <li>
-                    <img src="https://static-clova.pstatic.net/static/d15c0af/img/bridge/img_clova_friends_mini.png" alt="">
+                    <img src="img/clova05.jpg" alt="CLOVA Friends mini">
                     <div class="card">
                         <h4>CLOVA Friends mini</h4>
                         <p>더 작고 더 가벼워진<br>스마트 스피커</p>
@@ -120,7 +120,7 @@
                     </div>
                 </li>
                 <li>
-                    <img src="https://static-clova.pstatic.net/static/d15c0af/img/bridge/img_doraemon_edition.png" alt="">
+                    <img src="img/clova06.jpg" alt="Doraemon edition">
                     <div class="card">
                         <h4>Doraemon edition</h4>
                         <p>고양이형 만능 로봇 도라에몽을<br>모티브로 한 스마트 스피커</p>
@@ -130,7 +130,7 @@
                     </div>
                 </li>
                 <li>
-                    <img src="https://static-clova.pstatic.net/static/d15c0af/img/bridge/img_minions_edition.png" alt="">
+                    <img src="img/clova07.jpg" alt="MINIONS edition">
                     <div class="card">
                         <h4>MINIONS edition</h4>
                         <p>귀여운 악동 미니언즈를<br>모티브로 한 스마트 스피커</p>
@@ -146,7 +146,7 @@
             <p>파트너사와 함께 만든 클로바 스마트 디바이스들을 만나보세요.</p>
             <ul class="card-ul">
                 <li>
-                    <img src="https://static-clova.pstatic.net/static/d15c0af/img/bridge/img_clova_clock_plus2.png" alt="">
+                    <img src="img/clova02.jpg" alt="CLOVA Clock+2">
                     <div class="card">
                         <span>with LG U+</span>
                         <h4>CLOVA Clock+2</h4>
@@ -157,7 +157,7 @@
                     </div>
                 </li>
                 <li>
-                    <img src="https://static-clova.pstatic.net/static/d15c0af/img/bridge/img_clova_clock_plus.png" alt="">
+                    <img src="img/clova02.jpg" alt="CLOVA Clock+">
                     <div class="card">
                         <span class="LG">with LG U+</span>
                         <h4>CLOVA Clock+</h4>
@@ -168,7 +168,7 @@
                     </div>
                 </li>
                 <li>
-                    <img src="https://static-clova.pstatic.net/static/d15c0af/img/bridge/img_clova_friends_plus.png" alt="">
+                    <img src="img/clova08.jpg" alt="CLOVA Friends+">
                     <div class="card">
                         <span class="LG">with LG U+</span>
                         <h4>CLOVA Friends+</h4>
@@ -179,7 +179,7 @@
                     </div>
                 </li>
                 <li>
-                    <img src="https://static-clova.pstatic.net/static/d15c0af/img/bridge/img_clova_on.png" alt="">
+                    <img src="img/clova09.jpg" alt="CLOVA ON+">
                     <div class="card">
                         <span class="LG">with LG U+</span>
                         <h4>CLOVA ON+</h4>
