--- a/site/index.html
+++ b/site/index.html
@@ -149,6 +149,7 @@
                     <p>코드 보기 - 실기연습1 <a href="test05.html">View</a></p>
                     <p>코드 보기 - 실기연습2 <a href="test06-1.html">View</a></p>
                     <p>코드 보기 - 실기연습3 <a href="test07.html">View</a></p>
+                    <p>코드 보기 - 실기연습4 <a href="test08.html">View</a></p>
                 </div>
                 <!-- //Intro7 -->
 
