--- a/refer-effect/gameEffect/cardGame2.html
+++ b/refer-effect/gameEffect/cardGame2.html
@@ -42,7 +42,7 @@
 
         /* 기본설정 */
         body {
-            background: #EBE8E4;
+            background: #1C1812;
         }
 
         /* audio */
@@ -71,12 +71,12 @@
             font-family: 'Montserrat';
             margin-bottom: 10px;
             font-size: 50px;
-            color: #000;
+            color: #fff;
         }
         .title p {
             font-family: 'Montserrat';
             font-size: 30px;
-            color: #000;
+            color: #fff;
         }
         .title span {
             font-size: 30px;
@@ -133,7 +133,7 @@
             left: 50%; top: 50%;
             transform: translate(-50%, -50%);
             perspective: 600px;
-            border: 6px solid #000;
+            border: 6px solid #fff;
             border-radius: 1vw;
             padding: 1vw;
         }
