--- a/refer-effect/parallaxEffext/javascriptPE04_port.html
+++ b/refer-effect/parallaxEffext/javascriptPE04_port.html
@@ -51,10 +51,10 @@
 <body class="parallax">
 
     <!-- header -->
-    <!-- <header class="paraInfo">
+    <header class="paraInfo">
         <h1><a href="index.html">Parallax Effect04 - javascript</a></h1>
         <p>패랠랙스 스크로링 효과 - 숨김 메뉴2</p>
-    </header> -->
+    </header>
     <!-- //header -->
 ​
     <!-- main -->
