--- a/refer-effect/sliderEffect/javascriptSE04_port.html
+++ b/refer-effect/sliderEffect/javascriptSE04_port.html
@@ -119,10 +119,10 @@
     <!-- //contents -->
 
     <!-- info -->
-    <!-- <div class="info">
+    <div class="info">
         <h1><a href="index.html">Slider Effect04 - javascript</a></h1>
         <p>이미지 슬라이드 - 위로 움직이기</p>
-    </div> -->
+    </div>
 
     <div class="info right">
         <ul>
