--- a/refer-effect/mouseEffect/javascriptME07_port.html
+++ b/refer-effect/mouseEffect/javascriptME07_port.html
@@ -132,10 +132,10 @@
     <!-- //contents -->
 
     <!-- info -->
-    <!-- <div class="info">
+    <div class="info">
         <h1><a href="index.html">Mouse Effect07 - javascript</a></h1>
         <p>마우스 이펙트 - 텍스트 효과</p>
-    </div> -->
+    </div>
 
     <div class="info right">
         <ul>
